Update footer subheading classes to fix mobile vertical alignment (#349)
* Update footer subheading classes to fix mobile vertical alignment (Fixes #308)

--- a/media/css/protocol/components/_footer.scss
+++ b/media/css/protocol/components/_footer.scss
@@ -34,6 +34,32 @@ $image-path: '/media/protocol/img';
     }
 }
 
+.c-footer-section-download, .c-footer-section-platforms {
+    .c-footer-subheading {
+        font-weight: var(--title-font-weight);
+        color: m24.$token-color-off-white;
+
+        // Ensure links within footer subheadings inherit the parent's styles
+        a:link,
+        a:visited {
+            color: inherit;
+            font-weight: inherit;
+        }
+
+        a:hover,
+        a:focus,
+        a:active {
+            color: inherit;
+            font-weight: inherit;
+        }
+    }
+
+    // Override responsive margin for Download Firefox sub heading to prevent it from breaking the layout
+    .c-footer-section-platforms .c-footer-subheading {
+        margin: 0;
+    }
+}
+
 // external link icon
 .mzp-c-footer-section a[href^="http"]::after {
     @include bidi((
@@ -102,6 +128,7 @@ $image-path: '/media/protocol/img';
                 "platforms business";
             grid-template-columns: repeat(2, minmax(0, 1fr));
             margin-bottom: $layout-sm;
+            padding-bottom: $layout-sm;
 
             .c-footer-heading-download {
                 grid-area: download;
@@ -109,12 +136,8 @@ $image-path: '/media/protocol/img';
                 grid-column-start: 1;
             }
 
-            .c-footer-list-download {
+            .c-footer-section-platforms {
                 grid-area: platforms;
-
-                li:last-child {
-                    margin-bottom: 0;
-                }
             }
 
             .c-footer-section-latest {
